# arfigyelo-search-mcp

./: .gitignore  README.md  pyproject.toml
src/arfigyelo_search_mcp/: __init__.py  cli.py  data.py  search.py  server.py
